# nssc2ex1

./: .gitignore  CMakeLists.txt  Makefile  NSSC2_sn.cpp  README.md  Task1.md  Task_1.tex  chat.txt  functions_sn.h  submit_script_1D.sh
Exercise_1/: CMakeCache.txt  CMakeLists.txt  Task_1.aux  Task_1.fdb_latexmk  Task_1.fls  Task_1.tex  cmake_install.cmake  compile_commands.json  members.txt
Exercise_1/analysis/: stdout-jacobiMPI_1D_1k.txt  stdout-jacobiMPI_1D_250.txt  stdout-jacobiMPI_1D_2k.txt
Exercise_1/analysis/.ipynb_checkpoints/: result125-checkpoint.txt  result2000-checkpoint.txt
Exercise_1/analysis/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
Exercise_1/cluster_run/: 1D_1000.txt  r125_submit_script_1D.sh  r2000_submit_script_1D.sh  r250_submit_script_1D.sh  stdout-jacobiMPI_1D86651.txt  stdout-jacobiMPI_1D_1k.txt  stdout-jacobiMPI_1D_250.txt
Exercise_1/jacobi_reference/: cppJacobi.cpp  cppJacobi.hpp
Exercise_1/src/: NSSC2_sn.cpp  jacobiMPI.cpp  jacobiMPI2D.cpp  nssc2_theo.cpp
analysis/: result250.txt  test_result.txt
cluster_run/: r1000_submit_script_1D copy 3.sh  r1000_submit_script_1D.sh  r125_submit_script_1D.sh  r2000_submit_script_1D copy 2.sh  r250_submit_script_1D copy.sh
example_mpi/: job.sh  main.cpp
example_mpi_cart/: main.cpp
example_mpi_loop/: job.sh  main.cpp
example_omp/: job.sh  main.cpp
example_single_thread/: job.sh
include/: functions.h  functions_2D.h  functions_sn.h  jacobi.hpp
jacobi_reference/: Makefile
lib/: oldjacobi.cpp
results/: nssc2_Ex1.ipynb
src/: NSSC2_sn.cpp  arguments.hpp  job.sh  (+8 more)
(+13 files in other folders)
